smooth scrolling on link click

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 							<nav id="nav">
 								<ul>
 									<li class="current"><a href="index.html">HOME</a></li>
-									<li><a href="#services">SERVICES</a></li>
-									<li><a href="#projects">PROJECTS</a></li>
-									<li><a href="#team">TEAM</a></li>
-									<li><a href="#contact">CONTACT</a></li>
+									<li><a href="#services" class="more scrolly">SERVICES</a></li>
+									<li><a href="#projects" class="more scrolly">PROJECTS</a></li>
+									<li><a href="#team" class="more scrolly">TEAM</a></li>
+									<li><a href="#contact" class="more scrolly">CONTACT</a></li>
 								</ul>
 							</nav>
 
@@ -44,12 +44,11 @@
 							<h1>Live into</h1>
 							<h1>Virtual Reality</h1>
 						</div>
-						<a href="#first" class="more scrolly">Learn More</a>
+						<a href="#services" class="more scrolly">Learn More</a>
 					</section>
 
 				<!-- Section -->
-					<a name="services"></a> 
-					<section class="main alt" id="first">
+					<section class="main alt" id="services">
 						<header>
 							<h2>Services</h2>
 							<p></p>
@@ -86,8 +85,7 @@
 					</section>
 
 				<!-- Section -->
-					<a name="projects"></a> 
-					<section class="main accent2">
+					<section class="main accent2" id="projects">
 						<header>
 							<h2>Projects</h2>
 							<p>On our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> you find a selection of projects we've done so far. Our most recent event was the Fete de la Musique in Shanghai.</p>
@@ -96,8 +94,7 @@
 						</section>
 
 				<!-- Section -->
-					<a name="team"></a> 
-					<section class="main">
+					<section class="main" id="team">
 						<header>
 							<h2>Meet the Team</h2>
 							<!--<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam facilisis ante sed etiam magna interdum congue. Sed consequat amet dolor magna consequat. Lorem ipsum dolor amet nullam sed etiam veroeros.</p>-->
@@ -124,8 +121,7 @@
 					</section>
 
 				<!-- Section -->
-					<a name="contact"></a> 
-					<section class="main alt special">
+					<section class="main alt special" id="contact">
 						<header>
 							<h2>Get in touch</h2>
 							<p>We are looking forward to hearing from you and make you a customized offer.</p>
