improve service text

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<header>
 											<h3>Customized Ads</h3>
 										</header>
-										<p>We track where consumers look at and determine the optimal locations for personalized and content based ads. Enhance the sale of merchandise articles and offer additional publicity to artists and sponsors.</p>
+										<p>We track where consumers look at and determine the optimal locations for personalized and content based ads which do not interfer with the VR experience. Enhance the sale of merchandise articles and offer additional publicity to artists and sponsors. Create a lasting experience with dynamic ads and a continuous revenue stream.</p>
 									</div>
 									<div class="image" data-position="center"><img src="images/customized_ads.jpg" alt="" /></div>
 								</article>
