--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">HOME</a></li>
+									<li><a href="index.html">HOME</a></li>
 									<li><a href="#services" class="more scrolly">SERVICES</a></li>
 									<li><a href="#projects" class="more scrolly">PROJECTS</a></li>
 									<li><a href="#team" class="more scrolly">TEAM</a></li>
