resized banner, added 3 better images, small header change in html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 						<!-- Logo -->
 							<div class="logo">
-								<a href="index.html"><strong>RayShaper</strong> Virtual Reality Videos</a>
+								<a href="index.html"><strong>RayShaper</strong>&nbsp Virtual Reality Videos</a>
 							</div>
 
 						<!-- Nav -->
@@ -102,17 +102,17 @@
 						<div class="inner">
 							<ul class="faces">
 								<li>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/pic01.jpg" alt="Philip Junker" /></span>
 									<h3>Philip Junker</h3>
 									<p align="justify">With a computer science background from ETH Zürich and his passion for startups, Philip is responsible for the business development as well as the shaping and development of our core technology.</p>
 								</li>
 								<li>
-									<span class="image"><img src="images/pic02.jpg" alt="" /></span>
+									<span class="image"><img src="images/pic02.jpg" alt="Jiangtao Wen" /></span>
 									<h3>Jiangtao Wen</h3>
 									<p align="justify">As a professor of computer science and technology at Tsinghua University in Beijing, Gene specialized in multimedia technologies. He founded several successful technology startups. Our core technology is based on research from his group.</p>
 								</li>
 								<li>
-									<span class="image"><img src="images/pic03.jpg" alt="" /></span>
+									<span class="image"><img src="images/pic03.jpg" alt="Minhao Tang" /></span>
 									<h3>Minhao Tang</h3>
 									<p align="justify">Minhao is a PhD candidate at Tsinghua University in Beijing, specializing in visual computing and machine learning technologies. With many years of practical programming experience and his passion for technology he takes the technical lead.</p>
 								</li>
