services in 3 blocks

--- a/index.html
+++ b/index.html
@@ -53,34 +53,19 @@
 							<h2>Services</h2>
 							<p></p>
 						</header>
-						<div class="inner">
-							<article class="post style2">
-								<div class="content">
-									<header>
-										<h3>High Quality 360° Live Streaming</h3>
-									</header>
-									<p>Together with your team we find the best solution for your event from the cameras to the VR devices and screens. Our algorithms offers the best available quality for 360° video rendering and streaming while our team supports you during the event.</p>
+						<div class="inner style2">
+							<div class="row 200%">
+								<div class="4u 12u$(medium)">
+									<p align="justify"><span class="image fit"><img src="images/live_360_stream.jpg" alt="" /></span><h4>360° live streaming</h3>Together with your team we find the best solution for your event from the cameras to the VR devices and content streaming. Our algorithms offer the best available quality for 360° video rendering and streaming while our team supports you before, during and after the event.</p>
 								</div>
-								<div class="image" data-position="center"><img src="images/live_360_stream.jpg" alt="" /></div>
-							</article>
-							<article class="post style2 alt">
-								<div class="content">
-									<header>
-										<h3>Enhanced Immersive Experience</h3>
-									</header>
-									<p>Offer additional values to your clients by providing background information about the current band or by showing current Instagram posts and tweets. The possibilities are limitless. Make your brand visible.</p>
+								<div class="4u 12u$(medium)">
+									<p align="justify"><span class="image fit"><img src="images/enhanced_immersive_exp.jpg" alt="" /></span><h4>Enhanced Experience</h3>Offer additional values to your clients by providing background information about the current band, current Instagram posts or tweets. The possibilities are limitless. Make it a fun experience to post about your event. Make your brand visible. </p>
 								</div>
-								<div class="image" data-position="center"><img src="images/enhanced_immersive_exp.jpg" alt="" /></div>
-							</article>
-							<article class="post style2">
-									<div class="content">
-										<header>
-											<h3>Customized Ads</h3>
-										</header>
-										<p>We track where consumers look at and determine the optimal locations for personalized and content based ads which do not interfer with the VR experience. Enhance the sale of merchandise articles and offer additional publicity to artists and sponsors. Create a lasting experience with dynamic ads and a continuous revenue stream.</p>
-									</div>
-									<div class="image" data-position="center"><img src="images/customized_ads.jpg" alt="" /></div>
-								</article>
+								<div class="4u$ 12u$(medium)">
+									<p align="justify"><span class="image fit"><img src="images/customized_ads.jpg" alt="" /></span><h4>Customized ads</h3>We determine the optimal locations for personalized ads by detecting where consumers look at. Enhance the sale of merchandise articles and offer additional publicity to artists and sponsors. Dynamic ads build the foundation of a continuous revenue stream.</p>
+								</div>
+							
+							</div>
 						</div>
 					</section>
 
