small text changes

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
 							<h2>Services</h2>
 							<p></p>
 						</header>
-						<div class="inner style2">
+						<div class="inner">
 							<div class="row 200%">
 								<div class="4u 12u$(medium)">
-									<p align="justify"><span class="image fit"><img src="images/live_360_stream.jpg" alt="" /></span><h4>360° live streaming</h3>Together with your team we find the best solution for your event from the cameras to the VR devices and content streaming. Our algorithms offer the best available quality for 360° video rendering and streaming while our team supports you before, during and after the event.</p>
+									<p><span class="image fit"><img src="images/live_360_stream.jpg" alt="" /></span><h4>360° live streaming</h3>Together with your team we find the best solution for your event from the cameras to the VR devices and content streaming. Our algorithms offer the best available quality for 360° video rendering and streaming while our team supports you before, during and after the event.</p>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p align="justify"><span class="image fit"><img src="images/enhanced_immersive_exp.jpg" alt="" /></span><h4>Enhanced Experience</h3>Offer additional values to your clients by providing background information about the current band, current Instagram posts or tweets. The possibilities are limitless. Make it a fun experience to post about your event. Make your brand visible. </p>
+									<p><span class="image fit"><img src="images/enhanced_immersive_exp.jpg" alt="" /></span><h4>Enhanced Experience</h3>Offer additional values to your clients by providing background information about the current band, current Instagram posts or tweets. The possibilities are limitless. Make it a fun experience to post about your event. Make your brand visible. </p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p align="justify"><span class="image fit"><img src="images/customized_ads.jpg" alt="" /></span><h4>Customized ads</h3>We determine the optimal locations for personalized ads by detecting where consumers look at. Enhance the sale of merchandise articles and offer additional publicity to artists and sponsors. Dynamic ads build the foundation of a continuous revenue stream.</p>
+									<p><span class="image fit"><img src="images/customized_ads.jpg" alt="" /></span><h4>Customized ads</h3>We determine the optimal locations for personalized ads by detecting where consumers look at. Enhance the sale of merchandise articles and offer additional publicity to artists and sponsors. Dynamic ads build the foundation of a continuous revenue stream.</p>
 								</div>
 							
 							</div>
@@ -73,7 +73,7 @@
 					<section class="main accent2" id="projects">
 						<header>
 							<h2>Projects</h2>
-							<p>On our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> you find a selection of projects we've done so far. Our most recent event was the Fete de la Musique in Shanghai.</p>
+							<p>On our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> you find a selection of our projects so far. Our most recent event was the Fete de la Musique in Shanghai.</p>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUKz0wGmX7DhgZMlyfg_6yP3fDSW0S5fX" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 						</header>
 						</section>
