--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 							<p>We are looking forward to hearing from you and make you a customized offer.</p>
 						</header>
 						<div class="inner narrow">
-							<form action="#" method="post">
+							<form action="https://formspree.io/pjunker@rayshaper.ch" method="post">
 								<div class="field half">
-									<input name="name" id="name" placeholder="Name" type="text" />
+									<input name="_replyto" id="name" placeholder="Name" type="text" />
 								</div>
 								<div class="field half">
 									<input name="email" id="email" placeholder="Email" type="email" />
