make form submit work v0.2

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 						<div class="inner narrow">
 							<form action="https://formspree.io/pjunker@rayshaper.ch" method="post">
 								<div class="field half">
-									<input name="_replyto" id="name" placeholder="Name" type="text" />
+									<input name="name" id="name" placeholder="Name" type="text" />
 								</div>
 								<div class="field half">
-									<input name="email" id="email" placeholder="Email" type="email" />
+									<input name="_replyto" id="email" placeholder="Email" type="email" />
 								</div>
 								<div class="field">
 									<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
