make youtube video resize on smaller screen

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 						<header>
 							<h2>Projects</h2>
 							<p>On our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> you find a selection of our projects so far. Our most recent event was the Fete de la Musique in Shanghai.</p>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUKz0wGmX7DhgZMlyfg_6yP3fDSW0S5fX" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<div class="vid-container">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUKz0wGmX7DhgZMlyfg_6yP3fDSW0S5fX" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
 						</header>
 						</section>
 
