add demo section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 									<li><a href="#services" class="more scrolly">SERVICES</a></li>
 									<li><a href="#projects" class="more scrolly">PROJECTS</a></li>
 									<li><a href="#team" class="more scrolly">TEAM</a></li>
+									<li><a href="#demo" class="more scrolly">DEMO</a></li>
 									<li><a href="#contact" class="more scrolly">CONTACT</a></li>
 								</ul>
 							</nav>
@@ -104,6 +105,22 @@
 									<p align="justify">Minhao is a PhD candidate at Tsinghua University in Beijing, specializing in visual computing and machine learning technologies. With many years of practical programming experience and his passion for technology he takes the technical lead.</p>
 								</li>
 							</ul>
+						</div>
+					</section>
+
+				<!-- Section -->
+					<section class="main accent2 special" id="demo">
+						<header>
+							<h2>Demo Software</h2>
+							<p>We license our software to Virtual Reality content producers.<br>
+								Convince yourself of the outstanding rendering quality of RayShaper with our slower CPU-only demo version for macOS.</p>
+						</header>
+						<div class="inner narrow">
+							<form action="http://loft.party:2280/RayShaper.dmg" method="get">
+								<ul class="actions">
+									<li><button class="button" type="download">Download</button></li>
+								</ul>
+							</form>
 						</div>
 					</section>
 
