--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<section class="main accent2" id="projects">
 						<header>
 							<h2>Projects</h2>
-							<p>On our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> you find a selection of our projects so far. Our most recent event was the Fete de la Musique in Shanghai.</p>
+							<p>Check out our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> for a selection of projects. Our most recent event was the Fête de la Musique in Shanghai.</p>
 							<div class="vid-container">
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUKz0wGmX7DhgZMlyfg_6yP3fDSW0S5fX" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
@@ -92,7 +92,7 @@
 								<li>
 									<span class="image"><img src="images/philip.jpg" alt="Philip Junker" /></span>
 									<h3>Philip Junker</h3>
-									<p align="justify">With a computer science background from ETH Zürich and his passion for startups, Philip is responsible for the business development as well as the shaping of our product. Besides that he works on the improvement of our core algorithms.</p>
+									<p align="justify">With a computer science background from ETH Zürich and his passion for startups, Philip is responsible for the business development as well as product shaping and development. Besides that he works on the improvement of our core algorithms.</p>
 								</li>
 								<li>
 									<span class="image"><img src="images/gene.jpg" alt="Jiangtao Wen" /></span>
