--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<div class="inner">
 							<div class="row 200%">
 								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/live_360_stream.jpg" alt="" /></span><h4>360° live streaming</h3>Together with your team we find the best solution for your event from the cameras to the VR devices and content streaming. Our algorithms offer the best available quality for 360° video rendering and streaming while our team supports you before, during and after the event.</p>
+									<p><span class="image fit"><img src="images/live_360_stream.jpg" alt="" /></span><h4>360° live streaming</h3>Together with your team we find the best solution for your event. We advise you on the optimal setup from the cameras to the VR devices. Our algorithms offer the best available quality for 360° video rendering and streaming while our team supports you before, during and after the event.</p>
 								</div>
 								<div class="4u 12u$(medium)">
 									<p><span class="image fit"><img src="images/enhanced_immersive_exp.jpg" alt="" /></span><h4>Enhanced Experience</h3>Offer additional values to your clients by providing background information about the current band, current Instagram posts or tweets. The possibilities are limitless. Make it a fun experience to post about your event. Make your brand visible. </p>
@@ -74,7 +74,7 @@
 					<section class="main accent2" id="projects">
 						<header>
 							<h2>Projects</h2>
-							<p>Check out our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> for a selection of projects. Our most recent event was the Fête de la Musique in Shanghai.</p>
+							<p>Check out our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> for a selection of projects. Our most recent event is the Fête de la Musique in Shanghai.</p>
 							<div class="vid-container">
 								<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUKz0wGmX7DhgZMlyfg_6yP3fDSW0S5fX" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 							</div>
