new demo download link

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								Convince yourself of the outstanding rendering quality of RayShaper with our slower CPU-only demo version for macOS.</p>
 						</header>
 						<div class="inner narrow">
-							<form action="http://loft.party:2280/RayShaper.dmg" method="get">
+							<form action="http://cool9.loft.party:8000/rayshaper.dmg" method="get">
 								<ul class="actions">
 									<li><button class="button" type="download">Download</button></li>
 								</ul>
