--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
 							<ul class="faces">
 								<li>
 									<span class="image"><img src="images/philip.jpg" alt="Philip Junker" /></span>
-									<h3>Philip Junker</h3>
+									<h3>Philip Junker, COO</h3>
 									<p align="justify">With a computer science background from ETH Zürich and his passion for startups, Philip is responsible for the business development as well as product shaping and development. Besides that he works on the improvement of our core algorithms.</p>
 								</li>
 								<li>
 									<span class="image"><img src="images/gene.jpg" alt="Jiangtao Wen" /></span>
-									<h3>Jiangtao Wen</h3>
+									<h3>Jiangtao Wen, CEO</h3>
 									<p align="justify">As a professor of computer science and technology at Tsinghua University in Beijing, Gene specialized in multimedia technologies and founded several successful technology startups. Our core technology is based on research from his group.</p>
 								</li>
 								<li>
 									<span class="image"><img src="images/minhao.jpg" alt="Minhao Tang" /></span>
-									<h3>Minhao Tang</h3>
+									<h3>Minhao Tang, CTO</h3>
 									<p align="justify">Minhao is a PhD candidate at Tsinghua University in Beijing, specializing in visual computing and machine learning technologies. With many years of practical programming experience and his passion for technology he takes the technical lead.</p>
 								</li>
 							</ul>
