--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
 					<section class="main alt" id="services">
 						<header>
 							<h2>Services</h2>
-							<p></p>
+							<p>RayShaper manufactures an innovative reconfigurable acquisition system that can produce various types of high quality immersive contents (mega-pixel, light field video with 6 degrees of freedom) along with a unique processing and editing software solution. RayShaper also proposes training programs to integrate its acquisition solution in a number of video production workflows and offers services for creation of immersive contents for promotion, advertisement, edutainment and immersive movie production. </p>
 						</header>
 						<div class="inner">
 							<div class="row 200%">
 								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/live_360_stream.jpg" alt="" /></span><h4>360° live streaming</h3>Together with your team we find the best solution for your event. We advise you on the optimal setup from the cameras to the VR devices. Our algorithms offer the best available quality for 360° video rendering and streaming while our team supports you before, during and after the event.</p>
+									<p><span class="image fit"><img src="images/live_360_stream0.jpg" alt="" /></span><h4>small foot-print 6 DoF camera</h3>A small foot-print 6 DoF camera that is capable of capturing light field information in a compact size with interchangeable lenses.</p>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/enhanced_immersive_exp.jpg" alt="" /></span><h4>Enhanced Experience</h3>Offer additional values to your clients by providing background information about the current band, current Instagram posts or tweets. The possibilities are limitless. Make it a fun experience to post about your event. Make your brand visible. </p>
+									<p><span class="image fit"><img src="images/enhanced_immersive_exp0.jpg" alt="" /></span><h4>compound vision camera system</h3>A compound vision camera system providing an equivalent resolution of billions of pixels, or 2 orders of magnitude higher than state-of-the-art single-lens camera systems. </p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p><span class="image fit"><img src="images/customized_ads.jpg" alt="" /></span><h4>Customized ads</h3>We determine the optimal locations for personalized ads by detecting where consumers look at. Enhance the sale of merchandise articles and offer additional publicity to artists and sponsors. Dynamic ads build the foundation of a continuous revenue stream.</p>
+									<p><span class="image fit"><img src="images/customized_ads0.jpg" alt="" /></span><h4>post production system</h3>A post production system to efficiently render ultra high resolution 3D 360 degree and immersive light field content in real time with very low latency. </p>
 								</div>
 							
 							</div>
@@ -87,7 +87,16 @@
 							<h2>Projects</h2>
 							<p>Check out our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> for a selection of projects. Our most recent event is the Fête de la Musique in Shanghai.</p>
 							<div class="vid-container">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUKz0wGmX7DhgZMlyfg_6yP3fDSW0S5fX" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/i7DS8i-kNRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+							<div class="vid-container">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/D_bXgi7pQvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+							<div class="vid-container">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/k-pTeHnMr8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+							<div class="vid-container">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/_zse3fZHhAA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</header>
 						</section>
@@ -105,7 +114,7 @@
 								<li>
 									<span class="image"><img src="images/gene.jpg" alt="Jiangtao Wen" /></span>
 									<h3>Jiangtao Wen, CEO</h3>
-									<p align="justify">As a professor of computer science and technology at Tsinghua University in Beijing, Gene specialized in multimedia technologies and founded several successful technology startups. Our core technology is based on research from his group.</p>
+									<p align="justify">RayShaper team is composed of Prof. Touradj Ebrahimi from EPFL , (chairman and CTO), Prof. Gene Wen from Tsinghua University (CEO) and Prof. Erica Han, from South China Agriculture University (COO). A dozen employees are envisaged to be hired in the next 24 months. RayShaper is currently at seed funding stage and plans an increase in capital by the end of 2019.</p>
 								</li>
 								<li>
 								</li>
@@ -157,7 +166,16 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="mailto:pjunker@rayshaper.ch" class="icon alt fa-envelope-o"><span class="label">Email</span></a></li>
+
 						</ul>
+						<div class="contactImfo">
+						 <span>Cantact: Touradj Ebrahimi</span>
+						 <span>E-mail: touradj.ebrahimi@epfl.ch</span>
+						 <span>Tel: +41 79 331 9993</span>
+						 <span>Address: Rue du Grand-Place 14 3963 Crans-Montana / Commune de Lens</span>
+						 <span>Canton: VS</span>
+						</div>
+						<p></p>
 						<p class="copyright">&copy; 2018 by RayShaper. All rights reserved.</p>
 					</footer>
 
