--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 									<li><a href="#services" class="more scrolly">SERVICES</a></li>
 									<li><a href="#projects" class="more scrolly">PROJECTS</a></li>
 									<li><a href="#team" class="more scrolly">TEAM</a></li>
-									<li><a href="#demo" class="more scrolly">DEMO</a></li>
+									<li><a href="#event" class="more scrolly">EVENT</a></li>
 									<li><a href="#contact" class="more scrolly">CONTACT</a></li>
 								</ul>
 							</nav>
@@ -68,13 +68,13 @@
 						<div class="inner">
 							<div class="row 200%">
 								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/live_360_stream0.jpg" alt="" /></span><h4>small foot-print 6 DoF camera</h3>A small foot-print 6 DoF camera that is capable of capturing light field information in a compact size with interchangeable lenses.</p>
+									<p><span class="image fit"><img src="images/services01.jpg" alt="" /></span><h4>small foot-print 6 DoF camera</h3>A small foot-print 6 DoF camera that is capable of capturing light field information in a compact size with interchangeable lenses.</p>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/enhanced_immersive_exp0.jpg" alt="" /></span><h4>compound vision camera system</h3>A compound vision camera system providing an equivalent resolution of billions of pixels, or 2 orders of magnitude higher than state-of-the-art single-lens camera systems. </p>
+									<p><span class="image fit"><img src="images/services02.jpg" alt="" /></span><h4>compound vision camera system</h3>A compound vision camera system providing an equivalent resolution of billions of pixels, or 2 orders of magnitude higher than state-of-the-art single-lens camera systems. </p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p><span class="image fit"><img src="images/customized_ads0.jpg" alt="" /></span><h4>post production system</h3>A post production system to efficiently render ultra high resolution 3D 360 degree and immersive light field content in real time with very low latency. </p>
+									<p><span class="image fit"><img src="images/services03.jpg" alt="" /></span><h4>post production system</h3>A post production system to efficiently render ultra high resolution 3D 360 degree and immersive light field content in real time with very low latency. </p>
 								</div>
 							
 							</div>
@@ -86,19 +86,27 @@
 						<header>
 							<h2>Projects</h2>
 							<p>Check out our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> for a selection of projects. Our most recent event is the Fête de la Musique in Shanghai.</p>
-							<div class="vid-container">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/i7DS8i-kNRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-							<div class="vid-container">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/D_bXgi7pQvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-							<div class="vid-container">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/k-pTeHnMr8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-							<div class="vid-container">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/_zse3fZHhAA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
 						</header>
+							<table class="projectsTable">
+							  <tr>
+							    <td>
+							        <div class="vid-container vid-container-first">
+								    	<iframe width="560" height="315" src="https://www.youtube.com/embed/i7DS8i-kNRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="vid-container">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/k-pTeHnMr8Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+								</td>
+							    <td>							
+									<div class="vid-container vid-container-first">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/D_bXgi7pQvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+									<div class="vid-container">
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/_zse3fZHhAA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
+								</td>
+							  </tr>
+							</table>
 						</section>
 
 				<!-- Section -->
@@ -123,7 +131,7 @@
 					</section>
 
 				<!-- Section -->
-					<section class="main accent2 special" id="demo">
+<!-- 					<section class="main accent2 special" id="demo">
 						<header>
 							<h2>Demo Software</h2>
 							<p>We license our software to Virtual Reality content producers.<br>
@@ -136,8 +144,26 @@
 								</ul>
 							</form>
 						</div>
+					</section> -->
+					<section class="main accent2 special" id="event">
+						<header>
+							<h2>Event</h2>
+							<p>Montreux Jazz Festival 2019</p>
+						</header>
+						<div class="inner narrow">
+							<div class="row 200%">
+								<div class="4u 12u$(medium)">
+									<p><span class="image fit"><img src="images/event01.jpg" alt="" /></span></p>
+								</div>
+								<div class="4u 12u$(medium)">
+									<p><span class="image fit"><img src="images/event02.jpg" alt="" /></span></p>
+								</div>
+								<div class="4u$ 12u$(medium)">
+									<p><span class="image fit"><img src="images/event03.jpg" alt="" /></span></p>
+								</div>
+							</div>
+						</div>
 					</section>
-
 				<!-- Section -->
 					<section class="main alt special" id="contact">
 						<header>
