--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
 						 <span>Cantact: Touradj Ebrahimi</span>
 						 <span>E-mail: touradj.ebrahimi@epfl.ch</span>
 						 <span>Tel: +41 79 331 9993</span>
-						 <span>Address: Rue du Grand-Place 14 3963 Crans-Montana / Commune de Lens</span>
-						 <span>Canton: VS</span>
+						 <span>Address: Rue Centrale 54 CH- 3963 Crans-Montana Switzerland</span>
 						</div>
 						<p></p>
 						<p class="copyright">&copy; 2018 by RayShaper. All rights reserved.</p>
