update some imfo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Relativity by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
-	test
+	testa
 -->
 <html>
 	<head>
