--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Relativity by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
-	testa
+	test
 -->
 <html>
 	<head>
@@ -43,6 +43,7 @@
 									<li><a href="#projects" class="more scrolly">PROJECTS</a></li>
 									<li><a href="#team" class="more scrolly">TEAM</a></li>
 									<li><a href="#event" class="more scrolly">EVENT</a></li>
+									<li><a href="#news" class="more scrolly">NEWS</a></li>
 									<li><a href="#contact" class="more scrolly">CONTACT</a></li>
 								</ul>
 							</nav>
@@ -130,21 +131,6 @@
 						</div>
 					</section>
 
-				<!-- Section -->
-<!-- 					<section class="main accent2 special" id="demo">
-						<header>
-							<h2>Demo Software</h2>
-							<p>We license our software to Virtual Reality content producers.<br>
-								Convince yourself of the outstanding rendering quality of RayShaper with our slower CPU-only demo version for macOS.</p>
-						</header>
-						<div class="inner narrow">
-							<form action="http://cool9.loft.party:8000/rayshaper.dmg" method="get">
-								<ul class="actions">
-									<li><button class="button" type="download">Download</button></li>
-								</ul>
-							</form>
-						</div>
-					</section> -->
 					<section class="main accent2 special" id="event">
 						<header>
 							<h2>Event</h2>
@@ -164,8 +150,25 @@
 							</div>
 						</div>
 					</section>
+
+									<!-- Section -->
+					<section class="main alt special" id="news">
+						<header>
+							<h2>NEWS</h2>
+							<p><a href="https://www.rts.ch/play/tv/emission/t-t-c--toutes-taxes-comprises?id=14235">A recent RTS program about Crans Montana, mentions RayShaper.</a></p>
+						</header>
+<!-- 						<div class="inner narrow">
+							<button class="button"><a href="https://www.rts.ch/play/tv/emission/t-t-c--toutes-taxes-comprises?id=14235">Read</a></button>
+							<form action="http://cool9.loft.party:8000/rayshaper.dmg" method="get">
+								<ul class="actions">
+									<li><button class="button" type="download">Read</button></li>
+								</ul>
+							</form>
+						</div> -->
+					</section>
+
 				<!-- Section -->
-					<section class="main alt special" id="contact">
+					<section class="main accent2 special" id="contact">
 						<header>
 							<h2>Get in touch</h2>
 							<p>We are looking forward to hearing from you and make you a customized offer.</p>
