add events photo & video

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 						<!-- Logo -->
 							<div class="logo">
-								<a href="index.html"><strong>RayShaper</strong>&nbsp Virtual Reality Videos</a>
+								<a href="index.html"><strong>RayShaper</strong>&nbsp  Where the Virtual Becomes Reality</a>
 							</div>
 
 						<!-- Nav -->
@@ -42,7 +42,7 @@
 									<li><a href="#services" class="more scrolly">SERVICES</a></li>
 									<li><a href="#projects" class="more scrolly">PROJECTS</a></li>
 									<li><a href="#team" class="more scrolly">TEAM</a></li>
-									<li><a href="#event" class="more scrolly">EVENT</a></li>
+									<li><a href="#event" class="more scrolly">EVENTS</a></li>
 									<li><a href="#news" class="more scrolly">NEWS</a></li>
 									<li><a href="#contact" class="more scrolly">CONTACT</a></li>
 								</ul>
@@ -133,7 +133,7 @@
 
 					<section class="main accent2 special" id="event">
 						<header>
-							<h2>Event</h2>
+							<h2>Events</h2>
 							<p>Montreux Jazz Festival 2019</p>
 						</header>
 						<div class="inner narrow">
@@ -148,6 +148,34 @@
 									<p><span class="image fit"><img src="images/event03.jpg" alt="" /></span></p>
 								</div>
 							</div>
+						</div>
+						<p>FIBA World Cup </p>
+						<div class="inner narrow">
+							<div class="row 200%">
+								<div class="4u 12u$(medium)">
+									<p><span class="image fit"><img src="images/FIBA01.jpeg" alt="" /></span></p>
+								</div>
+								<div class="4u 12u$(medium)">
+									<p><span class="image fit"><img src="images/FIBA02.jpeg" alt="" /></span></p>
+								</div>
+								<div class="4u$ 12u$(medium)">
+									<p><span class="image fit"><img src="images/FIBA03.jpeg" alt="" /></span></p>
+								</div>
+							</div>
+							<div class="row 200%">
+								<div class="4u 12u$(medium)">
+									<p><span class="image fit"><img src="images/FIBA04.jpeg" alt="" /></span></p>
+								</div>
+								<div class="4u 12u$(medium)">
+									<p><span class="image fit"><img src="images/FIBA05.jpeg" alt="" /></span></p>
+								</div>
+								<div class="4u$ 12u$(medium)">
+									<p><span class="image fit"><img src="images/FIBA06.jpeg" alt="" /></span></p>
+								</div>
+							</div>
+						</div>
+						<div class="inner narrow">
+							<embed id='v_player_cctv' width='100%' height='400' flashvars='videoId=20091109129210&filePath=/flvxml/2009/05/04/&isAutoPlay=true&url=http://app.cctv.com/special/cbox/detail/index.html?guid=edd152d1556e44d993a6c0fe190fc895&vsid=C10616&from=timeline&isappinstalled=0#0&tai=news&configPath=http://js.player.cntv.cn/xml/config/outside.xml&widgetsConfig=http://js.player.cntv.cn/xml/widgetsConfig/common.xml&languageConfig=&hour24DataURL=&outsideChannelId=channelBugu&videoCenterId=edd152d1556e44d993a6c0fe190fc895' allowscriptaccess='always' allowfullscreen='true' menu='true' quality='best' bgcolor='#000000' name='v_player_cctv' src='http://player.cntv.cn/standard/cntvOutSidePlayer.swf' type='application/x-shockwave-flash' lk_mediaid='lk_juiceapp_mediaPopup_1257416656250' lk_media='yes'/>
 						</div>
 					</section>
 
