--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 						</ul>
 						<div class="contactImfo">
 						 <span>Cantact: Touradj Ebrahimi</span>
-						 <span>E-mail: touradj.ebrahimi@epfl.ch</span>
+						 <span>E-mail: info@rayshaper.ch</span>
 						 <span>Tel: +41 79 331 9993</span>
 						 <span>Address: Rue Centrale 54 CH- 3963 Crans-Montana Switzerland</span>
 						</div>
