--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
 					<section class="main alt" id="services">
 						<header>
 							<h2>Services</h2>
-							<p>RayShaper manufactures an innovative reconfigurable acquisition system that can produce various types of high quality immersive contents (giga pixel, light field video with 6 degrees of freedom) along with a unique processing and editing software solution. RayShaper also proposes training programs to integrate its acquisition solution in a number of video production workflows and offers services for creation of immersive contents for promotion, advertisement, edutainment and immersive movie production. </p>
+							<p>RayShaper manufactures an innovative reconfigurable acquisition system that can produce various types of high quality immersive contents (gigapixel, light field video with 6 degrees of freedom) along with a unique processing and editing software solution.</p>
+							<p>RayShaper provides training programs to integrate its acquisition solution into a number of video production workflows and offers services for creation of immersive contents for promotion, advertisement, educational entertainment and immersive movie production.</p>
+							<p>Rayshaper also provides computer system design, software design and implementation services tailored to it's customers in the video acquistion domain.</p>
 						</header>
 						<div class="inner">
 							<div class="row 200%">
