--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 							<p>RayShaper manufactures an innovative reconfigurable acquisition system that can produce various types of high quality immersive contents (gigapixel, light field video with 6 degrees of freedom) along with a unique processing and editing software solution.</p>
 							<p>RayShaper provides training programs to integrate its acquisition solution into a number of video production workflows and offers services for creation of immersive contents for promotion, advertisement, educational entertainment and immersive movie production.</p>
 							<p>Rayshaper also provides computer system design, software design and implementation services tailored to it's customers in the video acquistion domain.</p>
+							<p>Finally, Rayshaper provide hosted custom cutting edge computing technology and programmable information services through our website on a per request basis.</p>
 						</header>
 						<div class="inner">
 							<div class="row 200%">
