--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
 
 						</ul>
 						<div class="contactImfo">
-						 <span>Cantact: Erica Han</span>
+						 <span>Contact: Erica Han</span>
 						 <span>E-mail: info@rayshaper.ch</span>
 						 <span>Tel: +41 79 331 9993</span>
-						 <span>Address: Los Angeles, CA USA</span>
+						 <span>Los Angeles, CA USA</span>
 						</div>
 						<p></p>
 						<p class="copyright">&copy; 2018 by RayShaper. All rights reserved.</p>
